# js-wasm-speed-test

./: Cargo.toml  README.md  crates.md  summary.md  test.js
lib/: Cargo.toml
lib/src/: benchmark.rs  errors.rs  js.rs  lib.rs  resources.rs  test.rs  validator.rs  wasm.rs
lib/src/js/: chakra.rs  deno.rs  duktape.rs  javascriptcore.rs  runner.rs  spidermonkey.rs  v8.rs
lib/src/wasm/: deno.rs  javascriptcore.rs  spidermonkey.rs  v8.rs  wasmer.rs  wasmi.rs
src/: main.rs
