[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["resource"] }
procspawn = "1.0.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
sysinfo = "0.29.10"
tokio = "1.34.0"
v8 = "0.81.0"
