[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chakracore = "0.2.0"
deno_core = "0.232.0"
futures = "0.3.29"
javascriptcore-rs = "1.1.2"
kg-js = "0.8.4"
mozjs = "0.10.1"
nix = { version = "0.27.1", features = ["resource"] }
procspawn = "1.0.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
sha256 = "1.4.0"
sysinfo = "0.29.10"
tokio = "1.34.0"
v8 = "0.81.0"
